Fix focus color on select for dark mode.

--- a/src/wp-a11y-day/css/high-contrast-dark.css
+++ b/src/wp-a11y-day/css/high-contrast-dark.css
@@ -6,3 +6,7 @@ body {
 	--bg: Black;
 	--fg: White;
 }
+
+select:focus {
+	color: white;
+}
